Name:                   errors-mtl
Version:                0.0.0
Author:                 Athan Clark <athan.clark@gmail.com>
Maintainer:             Athan Clark <athan.clark@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               Overloaded versions of some of the utilities in the errors library.
-- Description:
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Control.Error.Util.Extended
  Other-Modules:        Control.Error.Util.Extended.Internal
  Build-Depends:        base >= 4.6 && < 5
                      , errors
                      , mtl

Source-Repository head
  Type:                 git
  Location:             https://github.com/athanclark/errors-mtl
